###############################################################################
#
# ZipLib
# Source/ZipLib/extlibs/CMakeLists.txt
#
# Howard N Smith (howard@blacktriangles.com)
# February 17, 2016
# (c) blacktriangles 2016 (http://www.blacktriangles.com)
###############################################################################

add_subdirectory( bzip2 )
add_subdirectory( lzma )
add_subdirectory( zlib )
